classDiagram
    class Transaction {
        -String transactionId
        -double amount
        -TransactionStatus status
    }
    class Merchant {
        -String merchantId
        -String name
    }
    class PaymentGatewayService {
        <<interface>>
        +processPayment()
    }
    PaymentGatewayService --> Transaction
    PaymentGatewayService --> Merchant
